--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -86,6 +86,10 @@
     .hero {
       max-width: 350px;
       width: 350px;
+         .p{
+       align-items: center;
+       text-align: center;
+    }
     }
   }
 }
@@ -96,5 +100,6 @@
       max-width: 400px;
       width: 400px;
     }
+ 
   }
 }
